--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "docs": "rimraf docs && typedoc src/index.ts",
+    "docs": "rimraf docs && typedoc",
     "build": "rimraf dist && rollup -c && api-extractor run",
     "lint": "eslint ./src --ext .ts --fix",
     "test": "cross-env TS_NODE_PROJECT='test/tsconfig.json' mocha",
@@ -62,6 +62,7 @@
     "standard-version": "^9.1.1",
     "ts-node": "^9.1.1",
     "typedoc": "^0.20.32",
+    "typedoc-plugin-merge-modules": "^2.0.0",
     "typescript": "^4.2.3"
   },
   "commitlint": {
