build: use esm module for browsers

--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "PlusAuth JavaScript Rest Client",
   "main": "dist/plusauth-rest-js.cjs.js",
   "module": "dist/plusauth-rest-js.esm.js",
-  "browser": "dist/plusauth-rest-js.min.js",
+  "browser": "dist/plusauth-rest-js.esm.js",
   "types": "dist/plusauth-rest-js.d.ts",
+  "exports": {
+    "import": "dist/plusauth-rest-js.esm.js",
+    "require":  "dist/plusauth-rest-js.cjs.js",
+    "node": "dist/plusauth-rest-js.cjs.js",
+    "default": "dist/plusauth-rest-js.esm.js"
+  },
   "files": [
     "dist"
   ],
