--- a/package.json
+++ b/package.json
@@ -6,12 +6,6 @@
   "module": "dist/plusauth-rest-js.esm.js",
   "browser": "dist/plusauth-rest-js.esm.js",
   "types": "dist/plusauth-rest-js.d.ts",
-  "exports": {
-    "import": "dist/plusauth-rest-js.esm.js",
-    "require": "dist/plusauth-rest-js.cjs.js",
-    "node": "dist/plusauth-rest-js.cjs.js",
-    "default": "dist/plusauth-rest-js.esm.js"
-  },
   "files": [
     "dist"
   ],
@@ -29,7 +23,7 @@
   },
   "dependencies": {
     "deepmerge": "^4.2.2",
-    "isomorphic-unfetch": "^3.0.0"
+    "cross-fetch": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
