--- a/package.json
+++ b/package.json
@@ -70,6 +70,23 @@
       "@commitlint/config-conventional"
     ],
     "rules": {
+      "type-enum": [
+        2,
+        "always",
+        [
+          "build",
+          "chore",
+          "ci",
+          "docs",
+          "feat",
+          "fix",
+          "perf",
+          "refactor",
+          "dev",
+          "test",
+          "type"
+        ]
+      ],
       "header-max-length": [
         0,
         "always",
