--- a/package.json
+++ b/package.json
@@ -26,26 +26,26 @@
     "deepmerge": "^4.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.13",
+    "@babel/core": "^7.14.0",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/preset-env": "^7.13.12",
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
-    "@microsoft/api-extractor": "^7.13.2",
+    "@babel/preset-env": "^7.14.0",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
+    "@microsoft/api-extractor": "^7.15.0",
     "@release-it/conventional-changelog": "^2.0.1",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
-    "@types/chai": "^4.2.15",
+    "@types/chai": "^4.2.17",
     "@types/mocha": "^8.2.2",
-    "@types/node-fetch": "^2.5.8",
-    "@types/sinon": "^9.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
+    "@types/node-fetch": "^2.5.10",
+    "@types/sinon": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "chai": "^4.3.4",
-    "core-js": "^3.9.1",
+    "core-js": "^3.11.2",
     "cross-env": "^7.0.3",
-    "eslint": "^7.23.0",
+    "eslint": "^7.25.0",
     "eslint-plugin-import": "^2.22.1",
     "fetch-mock": "^9.11.0",
     "husky": "^6.0.0",
@@ -53,17 +53,17 @@
     "mocha": "^8.3.2",
     "moment": "^2.29.1",
     "nock": "^13.0.11",
-    "release-it": "^14.5.0",
+    "release-it": "^14.6.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.43.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "sinon": "^10.0.0",
-    "standard-version": "^9.1.1",
+    "standard-version": "^9.2.0",
     "ts-node": "^9.1.1",
-    "typedoc": "^0.20.34",
+    "typedoc": "^0.20.36",
     "typedoc-plugin-merge-modules": "^2.0.0",
-    "typescript": "^4.2.3"
+    "typescript": "4.2.4"
   },
   "commitlint": {
     "extends": [
