--- a/package.json
+++ b/package.json
@@ -22,48 +22,54 @@
     "release": "cross-env GITHUB_TOKEN=$GITHUB_TOKEN release-it"
   },
   "dependencies": {
-    "cross-fetch": "^3.1.4",
+    "cross-fetch": "^3.1.5",
     "deepmerge": "^4.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/preset-env": "^7.15.0",
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.1.0",
-    "@microsoft/api-extractor": "^7.18.4",
-    "@release-it/conventional-changelog": "^3.0.1",
+    "@babel/core": "^7.17.2",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/preset-env": "^7.16.11",
+    "@commitlint/cli": "^16.1.0",
+    "@commitlint/config-conventional": "^16.0.0",
+    "@microsoft/api-extractor": "^7.19.4",
+    "@release-it/conventional-changelog": "^4.1.0",
     "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.4",
-    "@types/chai": "^4.2.21",
-    "@types/mocha": "^8.2.3",
-    "@types/node-fetch": "^2.5.12",
-    "@types/sinon": "^10.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
-    "chai": "^4.3.4",
-    "core-js": "^3.16.1",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node-fetch": "^3.0.3",
+    "@types/sinon": "^10.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "chai": "^4.3.6",
+    "core-js": "^3.21.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.27.0",
-    "eslint-plugin-import": "^2.23.3",
+    "eslint": "^8.9.0",
+    "eslint-plugin-import": "^2.25.4",
     "fetch-mock": "^9.11.0",
-    "husky": "^7.0.1",
-    "lint-staged": "^11.1.2",
-    "mocha": "^8.4.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.3",
+    "mocha": "^9.2.0",
     "moment": "^2.29.1",
-    "nock": "^13.1.1",
-    "release-it": "^14.11.0",
+    "nock": "^13.2.4",
+    "release-it": "^14.12.4",
     "rimraf": "^3.0.2",
-    "rollup": "^2.56.1",
+    "rollup": "^2.67.2",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "sinon": "^10.0.1",
-    "standard-version": "^9.3.1",
-    "ts-node": "^10.2.0",
-    "typedoc": "^0.21.5",
-    "typedoc-plugin-merge-modules": "^3.0.1",
-    "typescript": "4.3.5"
+    "rollup-plugin-typescript2": "^0.31.2",
+    "sinon": "^13.0.1",
+    "standard-version": "^9.3.2",
+    "ts-node": "^10.5.0",
+    "typedoc": "^0.22.11",
+    "typedoc-plugin-merge-modules": "^3.1.0",
+    "typescript": "4.5.5"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix --quiet "
+    ]
   },
   "commitlint": {
     "extends": [
