--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "scripts": {
     "docs": "rimraf docs && typedoc",
-    "build": "rimraf dist && rollup -c && api-extractor run",
+    "build": "rimraf dist && rollup -c --bundleConfigAsCjs && api-extractor run",
     "lint": "eslint ./src --ext .ts --fix",
     "test": "cross-env TS_NODE_PROJECT='test/tsconfig.json' mocha",
     "release": "cross-env GITHUB_TOKEN=$GITHUB_TOKEN release-it"
@@ -26,45 +26,45 @@
     "deepmerge": "^4.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.2",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/preset-env": "^7.16.11",
-    "@commitlint/cli": "^16.1.0",
-    "@commitlint/config-conventional": "^16.0.0",
-    "@microsoft/api-extractor": "^7.19.4",
-    "@release-it/conventional-changelog": "^4.1.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.1.0",
+    "@babel/core": "^7.19.6",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.19.4",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@microsoft/api-extractor": "^7.33.4",
+    "@release-it/conventional-changelog": "^5.1.1",
+    "@rollup/plugin-babel": "^6.0.2",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-json": "^5.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^10.0.0",
     "@types/node-fetch": "^3.0.3",
-    "@types/sinon": "^10.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
+    "@types/sinon": "^10.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "chai": "^4.3.6",
-    "core-js": "^3.21.0",
+    "core-js": "^3.25.5",
     "cross-env": "^7.0.3",
-    "eslint": "^8.9.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint": "^8.26.0",
+    "eslint-plugin-import": "^2.26.0",
     "fetch-mock": "^9.11.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.3",
-    "mocha": "^9.2.0",
-    "moment": "^2.29.1",
-    "nock": "^13.2.4",
-    "release-it": "^14.12.4",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "mocha": "^10.1.0",
+    "moment": "^2.29.4",
+    "nock": "^13.2.9",
+    "release-it": "^15.5.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.67.2",
+    "rollup": "^3.2.3",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.31.2",
-    "sinon": "^13.0.1",
-    "standard-version": "^9.3.2",
-    "ts-node": "^10.5.0",
-    "typedoc": "^0.22.11",
-    "typedoc-plugin-merge-modules": "^3.1.0",
-    "typescript": "4.5.5"
+    "rollup-plugin-typescript2": "^0.34.1",
+    "sinon": "^14.0.1",
+    "standard-version": "^9.5.0",
+    "ts-node": "^10.9.1",
+    "typedoc": "^0.23.17",
+    "typedoc-plugin-merge-modules": "^4.0.1",
+    "typescript": "4.8.4"
   },
   "lint-staged": {
     "*.ts": [
