--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "PlusAuth JavaScript Rest Client",
   "main": "dist/plusauth-rest-js.cjs.js",
   "module": "dist/plusauth-rest-js.esm.js",
-  "browser": "dist/plusauth-rest-js.esm.js",
+  "browser": "dist/plusauth-rest-js.browser.esm.js",
   "types": "dist/plusauth-rest-js.d.ts",
   "files": [
     "dist"
