--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "types": "./dist/plusauth-rest-js.d.ts",
   "typings": "./dist/plusauth-rest-js.d.ts",
   "exports": "./dist/plusauth-rest-js.js",
-  "packageManager": "pnpm@9.1.4",
+  "packageManager": "pnpm@9.3.0",
   "files": [
     "dist"
   ],
@@ -27,20 +27,20 @@
     "release": "cross-env GITHUB_TOKEN=$GITHUB_TOKEN release-it"
   },
   "dependencies": {
-    "cross-fetch": "^4.0.0",
-    "deepmerge": "^4.3.1"
+    "@fastify/deepmerge": "^1.3.0",
+    "cross-fetch": "^4.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@microsoft/api-extractor": "^7.46.2",
+    "@microsoft/api-extractor": "^7.47.0",
     "@release-it/conventional-changelog": "^8.0.1",
     "eslint": "^9.4.0",
     "eslint-plugin-import": "^2.29.1",
     "release-it": "^17.3.0",
     "tsup": "^8.1.0",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.11.0"
+    "typescript-eslint": "^7.13.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
