--- a/package.json
+++ b/package.json
@@ -37,14 +37,15 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@microsoft/api-extractor": "^7.47.0",
+    "@microsoft/api-extractor": "^7.47.2",
     "@release-it/conventional-changelog": "^8.0.1",
+    "@swc/core": "^1.7.0",
     "eslint": "^9.7.0",
     "eslint-plugin-import": "^2.29.1",
-    "release-it": "^17.5.0",
-    "tsup": "^8.1.0",
+    "release-it": "^17.6.0",
+    "tsup": "^8.2.1",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^7.16.0"
+    "typescript-eslint": "^7.16.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
