--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@commitlint/config-conventional": "^19.4.1",
     "@microsoft/api-extractor": "^7.47.7",
     "@release-it/conventional-changelog": "^8.0.1",
+    "@stylistic/eslint-plugin": "^2.8.0",
     "@swc/core": "^1.7.24",
     "eslint": "^9.10.0",
     "eslint-plugin-import": "^2.30.0",
