--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -1,13 +1,7 @@
 {
-  "extends": [
-    "@commitlint/config-conventional"
-  ],
+  "extends": ["@commitlint/config-conventional"],
   "rules": {
-    "header-max-length": [
-      0,
-      "always",
-      100
-    ],
+    "header-max-length": [0, "always", 100],
     "scope-case": [0],
     "type-enum": [
       2,
