--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "require": "./dist/plusauth-rest-js.cjs"
   },
   "packageManager": "pnpm@9.14.4",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "author": {
     "name": "Ismail H. Ayaz",
     "email": "ismail.ayaz@ekinokssoftware.com"
