--- a/.release-it.json
+++ b/.release-it.json
@@ -23,6 +23,10 @@
             "section": "Features"
           },
           {
+            "type": "type",
+            "section": "Type Improvements"
+          },
+          {
             "type": "fix",
             "section": "Bug Fixes"
           },
