chore: changelog generation not working as expected

--- a/.release-it.json
+++ b/.release-it.json
@@ -41,6 +41,10 @@
           {
             "type": "style",
             "section": "Stylistic Updates"
+          },
+          {
+            "type": "chore",
+            "hidden": true
           }
         ]
       },
