--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -6,21 +6,7 @@
     "type-enum": [
       2,
       "always",
-      [
-        "build",
-        "chore",
-        "ci",
-        "dev",
-        "docs",
-        "feat",
-        "fix",
-        "perf",
-        "refactor",
-        "revert",
-        "style",
-        "test",
-        "type"
-      ]
+      ["build", "chore", "ci", "dev", "docs", "feat", "fix", "perf", "refactor", "revert", "style", "test", "type"]
     ]
   }
 }
